--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.14.0",
+    "gitlog": "^4.0.4",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.1",
     "nib": "^1.1.2",
