--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "./node_modules/.bin/nodemon ./bin/www"
   },
   "dependencies": {
+    "arraydiff": "^0.1.3",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.14.0",
     "gitlog": "^4.0.4",
+    "jot": "github:joshdata/jot",
+    "lodash": "^4.17.21",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.1",
     "nib": "^1.1.2",
